--- a/app/assets/stylesheets/z_media_queries.scss
+++ b/app/assets/stylesheets/z_media_queries.scss
@@ -273,7 +273,7 @@
 
 }
 
-@media screen and (max-width:610px) {
+@media screen and (max-width:700px) {
 	.homeinvoice {
 		display:none;
 	}
